# natural-disaster-prediction

./: README.md  app.py  data_fetcher.py  model_testing.py  pyproject.toml
models/: __init__.py  disaster_predictor.py  time_series_analyzer.py
utils/: __init__.py  constants.py  data_processor.py  visualization.py
