[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.5",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "statsmodels>=0.14.4",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.45.0",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.10.1",
    "gradio>=5.28.0",
]